--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   @apply transition-colors duration-300;
   background-color: transparent;
+  overflow-x: hidden;
 }
 
 /* === THEME DEFINITIONS === */
