--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,12 +52,11 @@ body {
   @apply backdrop-blur-md;
   animation: glowPulse 3s ease-in-out infinite;
 }
-
-.matrix .theme-card:hover {
-  box-shadow: 0 0 12px #272727;
+.matrix .dropzone.theme-card:hover {
+  box-shadow: 0 0 28px #000000, 0 0 54px #000000;
   border-color: #000000;
+  transition: box-shadow 0.2s, border-color 0.2s;
 }
-
 /* === IRIS === */
 .iris {
   background-color: black;
@@ -101,11 +100,6 @@ body {
 .pepe .theme-card {
   background-color: rgba(160, 82, 250, 0.171);
   @apply backdrop-blur border-[#ff53da] text-[#faffc4] shadow-md;
-}
-
-.pepe .theme-card:hover {
-  box-shadow: 0 0 10px #bf55da, 0 0 25px #cb55da;
-  border-color: hsl(310, 100%, 65%);
 }
 
 .pepe header {
@@ -157,25 +151,18 @@ body {
   }
 }
 
-/* === DROPZONE HOVER GLOW === */
-.matrix .dropzone-active {
-  border: 2px solid #00ff00;
-  animation: glowPulse 1.8s ease-in-out infinite;
-  background-color: rgba(0, 0, 0, 0.85);
-  color: #00ff88;
+@layer base {
+  html {
+    font-family: 'Montserrat', sans-serif;
+  }
 }
-
-.iris .dropzone-active {
-  border: 2px solid #a78bfa;
-  box-shadow: 0 0 12px #a78bfa;
+html {
+  scroll-behavior: smooth;
 }
-
-.pepe .dropzone-active {
-  border: 2px solid #ff53e8;
-  box-shadow: 0 0 12px #a11fc2;
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
-
-.dark .dropzone-active {
-  border: 2px solid #ffffff;
-  box-shadow: 0 0 12px #ffffff;
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
 }
